# RAGnarok

./: .gitignore  APPLICATION_FLOW_GUIDE.md  BATCH_PROCESSING_EXPLANATION.md  CHANGELOG.md  CODE_DOCUMENTATION_SUMMARY.md  DESIGN_DECISIONS_AND_TRADEOFFS.md  README.md  SYSTEM_DESIGN_GUIDE.md  TECHNICAL_DOCUMENTATION.md  app.py  document_processor.py  embeddings.py  guardrails.py  main.py  pyproject.toml  rag_pipeline.py  requirements.txt  vector_store.py
documents/: network_topologies.txt
